--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="favicon/favicon.ico">
-    <link rel="icon" type="image/gif" href="favicon/animated_favicon1.gif">
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
